--- a/cloudfunctions/sendMessage/package.json
+++ b/cloudfunctions/sendMessage/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "sweetfruity",
+  "name": "sendMessage",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,8 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "miniprogram-recycle-view": "^0.1.5",
-    "pako": "^1.0.11"
-  },
-  "description": ""
+    "wx-server-sdk": "^2.0.2"
+  }
 }
